--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-title: M KAREEP NAVAS
+title: <p align="center">M KAREEP NAVAS</p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: 
+  <p align="center">
+  <p ahref="https://www.linkedin.com/in/kareep-navas-4124a0123>Linkedin</p> | 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
